[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Comic Sans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main Menu/Settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://Main Menu/Settings/BindUse.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/fonts/font = SubResource( 2 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 6 )
CheckBox/colors/font_color = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_focus = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckBox/fonts/font = SubResource( 10 )
CheckBox/styles/hover_pressed = SubResource( 7 )
CheckBox/styles/pressed = SubResource( 9 )
Label/fonts/font = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=17]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[sub_resource type="StyleBoxLine" id=16]
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[sub_resource type="Theme" id=15]
HSlider/styles/grabber_area = SubResource( 17 )
HSlider/styles/grabber_area_highlight = SubResource( 17 )
HSlider/styles/slider = SubResource( 16 )

[sub_resource type="Theme" id=18]

[sub_resource type="DynamicFont" id=19]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -87.5
margin_right = 66.0
margin_bottom = 87.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheck" type="CheckBox" parent="VBoxContainer"]
margin_right = 132.0
margin_bottom = 23.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Fullscreen"

[node name="SFXCheck" type="CheckBox" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 132.0
margin_bottom = 50.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "SFX"

[node name="MusicCheck" type="CheckBox" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 132.0
margin_bottom = 77.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Music"

[node name="FOV" type="Label" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 132.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 13 )
text = "FOV:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 132.0
margin_bottom = 124.0
theme = SubResource( 15 )
min_value = 70.0
max_value = 110.0
value = 70.0
rounded = true

[node name="MouseSensitivity" type="Label" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 132.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 13 )
text = "Mouse Sensitivity"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensitivitySlider" type="HSlider" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 132.0
margin_bottom = 171.0
theme = SubResource( 15 )
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.25

[node name="BindUse" type="Control" parent="VBoxContainer"]
margin_top = 175.0
margin_right = 132.0
margin_bottom = 175.0
theme = SubResource( 18 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/BindUse"]
margin_right = 40.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 19 )
text = "Interact:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BindInteract" type="OptionButton" parent="VBoxContainer/BindUse"]
margin_left = 74.0
margin_top = 1.0
margin_right = 132.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
text = "E"
align = 1
items = [ "E", null, false, 0, null, "LMB", null, false, 1, null, "RMB", null, false, 2, null, "MMB", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 23.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Default" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -57.0
margin_bottom = 23.0
focus_mode = 0
enabled_focus_mode = 0
text = "Default"

[connection signal="toggled" from="VBoxContainer/FullscreenCheck" to="." method="_on_FullscreenCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/SFXCheck" to="." method="_on_SFXCheck_toggled"]
[connection signal="toggled" from="VBoxContainer/MusicCheck" to="." method="_on_MusicCheck_toggled"]
[connection signal="value_changed" from="VBoxContainer/FOVSlider" to="." method="_on_FOVSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
[connection signal="item_selected" from="VBoxContainer/BindUse/BindInteract" to="VBoxContainer/BindUse" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Default" to="." method="_on_Default_pressed"]
